# atmospy-library

./: .gitignore  README.md  pyproject.toml
examples/: getting_started.ipynb
src/atmospy/: client.py  exceptions.py  functions.py  models.py
tests/: test_client.py  test_functions.py
